[gd_scene load_steps=3 format=3 uid="uid://d32h3edpmljuq"]

[ext_resource type="PackedScene" uid="uid://dpeyy3qejv1v6" path="res://Scenes/fire.tscn" id="1_4tf3y"]
[ext_resource type="Script" path="res://Scenes/spinning_flame.gd" id="1_esxaa"]

[node name="SpinningFlame" type="Node2D"]
script = ExtResource("1_esxaa")

[node name="RotationPoint" type="Node2D" parent="."]
scale = Vector2(-1.98172, -1.98172)

[node name="Marker2D" type="Marker2D" parent="RotationPoint"]
position = Vector2(50, 0)

[node name="Marker2D2" type="Marker2D" parent="RotationPoint"]
position = Vector2(35, 35)

[node name="Marker2D3" type="Marker2D" parent="RotationPoint"]
position = Vector2(0, 50)

[node name="Marker2D4" type="Marker2D" parent="RotationPoint"]
position = Vector2(-35, 35)

[node name="Marker2D5" type="Marker2D" parent="RotationPoint"]
position = Vector2(-50, 0)

[node name="Marker2D6" type="Marker2D" parent="RotationPoint"]
position = Vector2(-35, -35)

[node name="Marker2D7" type="Marker2D" parent="RotationPoint"]
position = Vector2(0, -50)

[node name="Marker2D8" type="Marker2D" parent="RotationPoint"]
position = Vector2(35, -35)

[node name="Flame" type="Node2D" parent="."]

[node name="Fire" parent="Flame" instance=ExtResource("1_4tf3y")]

[node name="Fire2" parent="Flame" instance=ExtResource("1_4tf3y")]

[node name="Fire3" parent="Flame" instance=ExtResource("1_4tf3y")]

[node name="Fire4" parent="Flame" instance=ExtResource("1_4tf3y")]

[node name="Fire5" parent="Flame" instance=ExtResource("1_4tf3y")]

[node name="Fire6" parent="Flame" instance=ExtResource("1_4tf3y")]

[node name="Fire7" parent="Flame" instance=ExtResource("1_4tf3y")]

[node name="Fire8" parent="Flame" instance=ExtResource("1_4tf3y")]
